test/libyul/yulSyntaxTests/if_statement_invalid_4.yul
{
    if calldatasize {}
}
// ----
// ParserError 7104: (9-21='calldatasize'): Builtin function "calldatasize" must be called.
